--- a/backend/lav-hata-paneli/package.json
+++ b/backend/lav-hata-paneli/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
