--- a/backend/package.json
+++ b/backend/package.json
@@ -37,14 +37,17 @@
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.23",
     "@types/file-saver": "^2.0.7",
     "@types/json2csv": "^5.0.7",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/jspdf": "^1.3.3",
-    "@types/node": "^24.0.10",
+    "@types/node": "^24.1.0",
     "@types/nodemailer": "^6.4.17",
     "@types/pdfkit": "^0.14.0",
+    "electron": "^37.2.4",
+    "electron-builder": "^26.0.12",
     "nodemon": "^3.1.10",
     "prisma": "^6.11.1",
     "ts-node": "^10.9.2",
